# pandora-req

./: Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
src/pandorareq/: __init__.py  nirda_requirements.py  nirdatester.py  visdatester.py
tests/: test_nirda.py  test_visda.py
