[project]
name = "pandorareq"
version = "0.1.1"
description = ""
authors = [
    {name = "Christina Hedges",email = "christina.l.hedges@nasa.gov"}
]
readme = "README.md"
requires-python =  ">=3.9,<3.13"
dependencies = [
    "gaiaoffline (>=1.0.0,<2.0.0)",
    "pandorapsf (>=0.5.0)",
    "pandorasat (>=0.9.2)",
    "pandas (>=2.2.3,<3.0.0)",
    "appdirs (>=1.4.4,<2.0.0)"
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.3.5"
pytest = "^8.3.5"

[tool.poetry]
packages = [{include = "pandorareq", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
